extensions/istio/tests/src/test/resources/v1alpha3/virtual-service-issue4315.yaml
#
# Copyright (C) 2015 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: ts
spec:
  hosts:
    - search-planner
status:
  validationMessages:
    - documentation_url: https://istio.io/v1.11/docs/reference/config/analysis/ist0101/?ref=status-controller
      level: ERROR
      code: IST0101
    - documentation_url: https://istio.io/v1.11/docs/reference/config/analysis/ist0101/?ref=status-controller
      level: INFO
      code: IST0101
